--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body.waiting * {
   justify-content: space-around;
   align-content: center;
   align-items: center;
-  /*margin-top: 20px;
+  margin-top: 15px;
+  /*
   margin-bottom: 20px;
   */
 }
@@ -60,7 +61,7 @@ body {
 .intro {
   background: #10a5ca;
   color: #eee8a9;
-  padding: 20px 0;
+  padding: 5px 0;
   border-radius: 2em;
 }
 
